# sysupdate-delta-updater-scripts

./: Cargo.toml  README.md
src/: lib.rs
src/create_delta_manifest/: main.rs
src/delta_manifest/: mod.rs
src/dump_delta_manifest/: main.rs
src/get_delta_info/: main.rs
src/update_image/: main.rs
src/update_image_downloading/: main.rs
src/updater_prototype/: main.rs
src/varlink_test_server_client/: test_pull_client.rs  test_pull_server.rs
