[package]
name = "sysupdate-delta-updater-scripts"
version = "0.1.0"
edition = "2024"
path = "src/delta_manifest/"

[[bin]]
name = "get_delta_info"
path = "src/get_delta_info/main.rs"

[[bin]]
name = "create_delta_manifest"
path = "src/create_delta_manifest/main.rs"

[[bin]]
name = "dump_delta_manifest"
path = "src/dump_delta_manifest/main.rs"

[dependencies]
crc-fast = "1.8.0"
gvariant = "0.5.1"
