[package]
name = "sysupdate-delta-updater-scripts"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "get_delta_info"
path = "src/get_delta_info/main.rs"

[[bin]]
name = "create_delta_manifest"
path = "src/create_delta_manifest/main.rs"

[[bin]]
name = "dump_delta_manifest"
path = "src/dump_delta_manifest/main.rs"

[[bin]]
name = "update_image"
path = "src/update_image/main.rs"

[[bin]]
name = "update_image_downloading"
path = "src/update_image_downloading/main.rs"

[dependencies]
bytes = "1.11.0"
crc-fast = "1.8.0"
curl = "0.4.49"
env_logger = "0.11.8"
futures = "0.3.31"
gvariant = "0.5.1"
log = "0.4.29"
multipart_async_stream = "0.2.4"
reqwest = { version = "0.12.24", features = ["rustls-tls", "stream"] }
tokio = { version = "1.48.0", features = ["full"] }
